--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation("androidx.navigation:navigation-compose:2.7.3")
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+
 }
