--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,13 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation("androidx.navigation:navigation-compose:2.7.3")
+    //Firebase and google sig-in
+    implementation 'com.google.firebase:firebase-auth-ktx:22.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    //Remote image remotly with Coil
+    implementation 'io.coil-kt:coil-compose:2.2.2'
+    //Navegation
+    implementation "androidx.navigation:navigation-compose:2.7.3"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
 }
