Added Google Sign In Method Await for navegation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
-    implementation 'com.google.firebase:firebase-auth:22.2.0'
+    //implementation 'com.google.firebase:firebase-auth:22.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -67,8 +67,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
     //Firebase and google sig-in
-    implementation 'com.google.firebase:firebase-auth-ktx:22.2.0'
-    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+
     implementation "androidx.compose.runtime:runtime-livedata:<1.4.4>"
     //implementation "androidx.compose.runtime:runtime-livedata"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0"
@@ -79,4 +78,18 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.7.3"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
+    // One tap sign in library
+    implementation("com.github.stevdza-san:OneTapCompose:1.0.9")
+
+    //Firebase services
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    //Google servies
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+
+
+    //hilt
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
 }
