--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,10 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
     //Firebase and google sig-in
-    implementation 'com.google.firebase:firebase-auth-ktx:22.2.0'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation(platform("com.google.firebase:firebase-bom:32.5.0"))
+    implementation("com.google.firebase:firebase-auth-ktx")
+    implementation("com.google.firebase:firebase-firestore-ktx")
     //Remote image remotly with Coil
     implementation 'io.coil-kt:coil-compose:2.2.2'
     //Navegation
